--- a/index.html
+++ b/index.html
@@ -8,8 +8,202 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- ============== كل عناصر الواجهة (بدون حذف) ============== -->
-  <!-- ... (ضع هنا كامل محتوى body من ملفك الأصلي) ... -->
+
+<!-- ======================== جميع عناصر الواجهة ======================== -->
+
+<!-- شاشة اختيار طريقة الفتح -->
+<div id="open-method-popup" class="hidden">
+  <div class="method-container">
+    <div class="method-header">
+      <h2>اختر طريقة الفتح</h2>
+      <span class="method-close" id="method-close-btn">✖️</span>
+    </div>
+    <div class="method-filename" id="method-filename">اسم الملف</div>
+    <div class="method-preview">
+      <canvas id="method-preview-canvas"></canvas>
+      <div class="method-loading" id="method-loading">⏳ جاري التحميل...</div>
+    </div>
+    <div class="method-buttons">
+      <button class="method-btn mozilla-btn" id="open-mozilla-btn">
+        <span class="method-btn-icon">📄</span>
+        <span class="method-btn-text">Mozilla PDF</span>
+      </button>
+      <button class="method-btn browser-btn" id="open-browser-btn">
+        <span class="method-btn-icon">🌐</span>
+        <span class="method-btn-text">المتصفح</span>
+      </button>
+      <button class="method-btn drive-btn" id="open-drive-btn">
+        <span class="method-btn-icon">💾</span>
+        <span class="method-btn-text">Google Drive</span>
+      </button>
+    </div>
+  </div>
+</div>
+
+<!-- شاشة Preload -->
+<div id="preload-screen" class="hidden">
+  <div class="preload-container">
+    <div class="notice">
+      💡 هذه الصفحة تظهر في أول زيارة فقط — الملفات ستُخزن في الكاش للتحميل السريع لاحقاً
+    </div>
+    <div class="logo">🏥</div>
+    <h1>جاري التحميل</h1>
+    <div class="subtitle">تجنب العدوى 🦠 واجمع العلاج 💊</div>
+    <div class="progress-container">
+      <div class="progress-bar" id="progressBar">0%</div>
+    </div>
+    <div class="file-status" id="fileStatus">جاري البدء...</div>
+    <button class="continue-btn" id="continueBtn">متابعة إلى الموقع ➡️</button>
+    <div class="game-container" id="gameContainer">
+      <div class="game-stats">
+        <div class="game-stat">❤️ <span id="heartsDisplay">0</span></div>
+        <div class="game-stat">⭐ <span id="scoreDisplay">0</span></div>
+      </div>
+      <div class="runner" id="runner">👨‍⚕️</div>
+      <div class="game-overlay" id="gameOverlay">
+        <h2>انتهت اللعبة!</h2>
+        <div class="final-score" id="finalScore">النقاط: 0</div>
+        <button class="restart-btn" id="restartBtn">🔄</button>
+      </div>
+    </div>
+    <div class="controls">
+      <button class="control-btn" id="leftBtn">➡️</button>
+      <button class="control-btn" id="rightBtn">⬅️</button>
+    </div>
+    <div class="leaderboard">
+      <h3>🏆 أفضل 5 لاعبين عالمياً</h3>
+      <ul class="leaderboard-list" id="leaderboardList">
+        <li class="leaderboard-item">
+          <span class="leaderboard-rank">-</span>
+          <span class="leaderboard-name">جاري التحميل...</span>
+          <span class="leaderboard-score">-</span>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<!-- شاشة اختيار المجموعة -->
+<div id="group-selection-screen">
+  <div id="group-selection-content">
+    <img id="main-logo" src="image/0.png" alt="شعار الكلية" />
+    <h1>اختر مجموعتك</h1>
+    <div id="group-buttons">
+      <button class="group-btn" data-group="A"><span class="group-letter">A</span><span class="group-label">Group A</span></button>
+      <button class="group-btn" data-group="B"><span class="group-letter">B</span><span class="group-label">Group B</span></button>
+      <button class="group-btn" data-group="C"><span class="group-letter">C</span><span class="group-label">Group C</span></button>
+      <button class="group-btn" data-group="D"><span class="group-letter">D</span><span class="group-label">Group D</span></button>
+    </div>
+    <p style="color: #888; font-size: 12px; margin-top: 20px;">
+      💡 يمكنك تغيير المجموعة لاحقاً من زر "🔄 Change Group"
+    </p>
+  </div>
+</div>
+
+<!-- شريط الأدوات -->
+<div id="js-toggle-container" class="top">
+  <div id="search-container">
+    <input type="text" id="search-input" placeholder="ابحث باسم الملف..." autocomplete="off">
+    <span id="search-icon" class="clickable-area">🔙</span>
+  </div>
+  <div class="controls-row">
+    <span id="move-toggle">↕️</span>
+    <span id="eye-toggle" title="إخفاء/إظهار البحث">👁️</span>
+    <div class="hover-toggle-container">
+      <span>Hover</span>
+      <label class="switch">
+        <input type="checkbox" id="js-toggle" checked>
+        <span class="slider round"></span>
+      </label>
+    </div>
+  </div>
+</div>
+
+<div id="eye-toggle-standalone" class="top">👁️</div>
+
+<!-- شاشة التحميل -->
+<div id="loading-overlay">
+  <div id="loading-content">
+    <img id="splash-image" src="image/0.png" alt="شعار التحميل" />
+    <h1 id="project-loading-title">جاري التحميل...</h1>
+    <div id="loader-lights">
+      <div class="light-bulb" id="bulb-1"></div>
+      <div class="light-bulb" id="bulb-2"></div>
+      <div class="light-bulb" id="bulb-3"></div>
+      <div class="light-bulb" id="bulb-4"></div>
+    </div>
+    <div id="legend">
+      <div class="legend-item red">أسئلة</div>
+      <div class="legend-item yellow">محاضرات</div>
+      <div class="legend-item white">مواد أخرى</div>
+      <div class="legend-item purple">إجابات</div>
+      <div class="legend-item green">سكاشن العملي</div>
+      <div class="legend-item blue">فيديو شرح</div>
+    </div>
+  </div>
+</div>
+
+<!-- عارض PDF -->
+<div id="pdf-overlay" class="hidden">
+  <div id="toolbar">
+    <div id="pdf-controls">
+      <button id="closePdfBtn" class="toolbar-btn">❌ إغلاق</button>
+      <button id="downloadBtn" class="toolbar-btn">⬇ تحميل</button>
+      <button id="shareBtn" class="toolbar-btn">🔗 مشاركة</button>
+      <button id="expand-toolbar-btn" class="pdf-control-btn" title="ملء الشاشة">🔼</button>
+    </div>
+  </div>
+  <iframe id="pdfFrame" src="" sandbox="allow-same-origin allow-scripts allow-popups allow-forms"></iframe>
+</div>
+
+<!-- نافذة معاينة PDF -->
+<div id="pdf-preview-popup" class="floating-preview">
+  <div class="preview-container">
+    <div class="preview-header">
+      <div class="preview-title" id="preview-filename">معاينة الملف</div>
+      <button class="preview-btn preview-open-btn" id="preview-open-btn">📄 فتح</button>
+    </div>
+    <div class="preview-canvas-container">
+      <div class="preview-loading" id="preview-loading">⏳ جاري التحميل...</div>
+      <canvas id="preview-canvas"></canvas>
+    </div>
+  </div>
+</div>
+
+<!-- الخريطة التفاعلية -->
+<div id="scroll-container">
+  <svg id="main-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMinYMin meet">
+    <defs></defs>
+    <g transform="translate(0,0)" id="files-list-container">
+      <image data-src="image/wood.webp" x="0" y="0" width="1024" height="2454" style="pointer-events: none;" />
+    </g>
+    <g id="dynamic-links-group"></g>
+    <g id="group-specific-content"></g>
+    <g id="upper-wood-layer" style="pointer-events: none; z-index: 3;">
+      <image data-src="image/Upper_wood.webp" x="0" y="0" width="1024" height="250" style="pointer-events: none;" />
+    </g>
+    <g id="fixed-controls-layer">
+      <g id="change-group-btn" style="cursor: pointer;">
+        <rect x="120" y="100" width="250" height="50" rx="10"/>
+        <text id="group-btn-text" x="245" y="130" text-anchor="middle" dominant-baseline="middle">Change Group 🔄</text>
+      </g>
+      <g id="preload-btn" style="cursor: pointer;">
+        <rect x="387" y="100" width="250" height="50" rx="10"/>
+        <text x="512" y="130" text-anchor="middle" dominant-baseline="middle">🔄 شاشة التحميل</text>
+      </g>
+      <g id="reset-btn" style="cursor: pointer;">
+        <rect x="654" y="100" width="250" height="50" rx="10"/>
+        <text id="reset-btn-text" x="779" y="130" text-anchor="middle" dominant-baseline="middle">🔄 Reset</text>
+      </g>
+      <g id="back-button-group" style="cursor: pointer;">
+        <rect id="back-btn" x="112" y="160" width="800" height="70" rx="15" />
+        <text x="512" y="195" id="back-btn-text" text-anchor="middle" dominant-baseline="middle">➡️ إلى الخريطة ➡️</text>
+      </g>
+    </g>
+  </svg>
+</div>
+
+<!-- ======================== نهاية عناصر الواجهة ======================== -->
 
   <!-- ✅ المكتبات الخارجية -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
