--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>semester-3 | خريطة الكلية التفاعلية</title>
-   <!-- Open Graph -->
+
+  <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://mue24med.github.io/semester-3/">
   <meta property="og:title" content="semester-3 | خريطة الكلية التفاعلية">
@@ -41,8 +42,7 @@
 </head>
 <body>
 
-<!-- ======================== جميع عناصر الواجهة ======================== -->
-
+<!-- ================ جميع عناصر الواجهة (بدون أي تغيير) ================ -->
 <!-- شاشة اختيار طريقة الفتح -->
 <div id="open-method-popup" class="hidden">
   <div class="method-container">
@@ -237,36 +237,95 @@
 
 <!-- ======================== نهاية عناصر الواجهة ======================== -->
 
-  <!-- ✅ المكتبات الخارجية -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
-  <script>
-    if (typeof pdfjsLib !== 'undefined') {
-      pdfjsLib.GlobalWorkerOptions.workerSrc = 
-        'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+<!-- ================ المكتبات الخارجية ================ -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+<script>
+  if (typeof pdfjsLib !== 'undefined') {
+    pdfjsLib.GlobalWorkerOptions.workerSrc = 
+      'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+  }
+</script>
+
+<!-- ✅ السكريبت الرئيسي – نقطة الدخول الوحيدة (يجب أن يكون في الجذر) -->
+<script src="script.js"></script>
+
+<!-- ✅ Tracker (غير معياري) -->
+<script src="tracker.js"></script>
+
+<!-- ✅ Service Worker -->
+<script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('./sw.js')
+      .then(registration => {
+        console.log('✅ Service Worker مسجل');
+        registration.addEventListener('updatefound', () => {
+          const newWorker = registration.installing;
+          newWorker.addEventListener('statechange', () => {
+            if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+              if (confirm('🔄 يوجد تحديث جديد. هل تريد إعادة التحميل؟')) {
+                newWorker.postMessage({ action: 'skipWaiting' });
+                window.location.reload();
+              }
+            }
+          });
+        });
+      })
+      .catch(err => console.error('❌ فشل تسجيل SW:', err));
+  });
+
+  let refreshing = false;
+  navigator.serviceWorker.addEventListener('controllerchange', () => {
+    if (!refreshing) {
+      refreshing = true;
+      window.location.reload();
     }
-  </script>
+  });
+}
+</script>
 
-  <!-- ✅ السكريبت الرئيسي – في الجذر – هو الوحيد الذي يحمل type="module"?
-       لا، type="module" ليس ضرورياً، استخدم src عادي -->
-  <script src="script.js"></script>
+<!-- ✅ فحص التحديثات من GitHub -->
+<script>
+async function checkForUpdates() {
+  try {
+    const lastCheck = localStorage.getItem('last_update_check');
+    const now = Date.now();
+    if (lastCheck && (now - parseInt(lastCheck)) < 300000) return;
 
-  <!-- ✅ Tracker (غير معياري) -->
-  <script src="tracker.js"></script>
+    const response = await fetch(
+      'https://api.github.com/repos/MUE24Med/s3/commits/main',
+      { cache: 'no-store', headers: { 'Accept': 'application/vnd.github.v3+json' } }
+    );
+    if (!response.ok) return;
+    const data = await response.json();
+    const latestSha = data.sha.substring(0, 7);
+    const lastSha = localStorage.getItem('last_commit_sha');
 
-  <!-- ✅ Service Worker (يُسجل بعد تحميل الصفحة) -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('./sw.js')
-          .then(reg => console.log('✅ SW مسجل'))
-          .catch(err => console.error('❌ SW فشل:', err));
-      });
+    if (!lastSha) {
+      localStorage.setItem('last_commit_sha', latestSha);
+      localStorage.setItem('last_update_check', now.toString());
+      return;
     }
-  </script>
 
-  <!-- ✅ فحص التحديثات (اختياري) -->
-  <script>
-    // ... كود فحص التحديثات ...
-  </script>
+    if (lastSha !== latestSha) {
+      console.log('🆕 تحديث جديد متاح:', latestSha);
+      const cacheNames = await caches.keys();
+      await Promise.all(cacheNames.map(name => caches.delete(name)));
+      localStorage.setItem('last_commit_sha', latestSha);
+      localStorage.removeItem('preload_done');
+      window.location.reload(true);
+    } else {
+      localStorage.setItem('last_update_check', now.toString());
+    }
+  } catch (error) {
+    console.warn('⚠️ خطأ في فحص التحديثات:', error);
+  }
+}
+window.addEventListener('load', checkForUpdates);
+document.addEventListener('visibilitychange', () => {
+  if (!document.hidden) checkForUpdates();
+});
+</script>
+
 </body>
 </html>
