--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <!-- أساسيات -->
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>semester-3 | خريطة الكلية التفاعلية</title>
 
-  <!-- Open Graph (WhatsApp / Facebook / Telegram) -->
+  <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://mue24med.github.io/semester-3/">
   <meta property="og:title" content="semester-3 | خريطة الكلية التفاعلية">
@@ -17,25 +15,18 @@
   <meta property="og:image:height" content="630">
   <meta property="og:locale" content="ar_AR">
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="semester-3 | خريطة الكلية التفاعلية">
-  <meta name="twitter:description" content="خريطة تفاعلية لعرض محاضرات وسكاشن الفرقة الثانية - الفصل الدراسي الثالث">
-  <meta name="twitter:image" content="https://mue24med.github.io/semester-3/image/0.webp">
-
   <!-- PWA / Mobile -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="theme-color" content="#000000">
   <meta name="color-scheme" content="only light">
-  <meta name="supported-color-schemes" content="light">
 
   <!-- Cache Control -->
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
-  <meta name="version" content="2025.02.11.FINAL.v3">
+  <meta name="version" content="2025.02.12.FINAL">
 
   <!-- Performance -->
   <link rel="preconnect" href="https://raw.githubusercontent.com" crossorigin>
@@ -51,6 +42,7 @@
 </head>
 <body>
 
+<!-- ================ جميع عناصر الواجهة ================ -->
 <!-- شاشة اختيار طريقة الفتح -->
 <div id="open-method-popup" class="hidden">
   <div class="method-container">
@@ -58,25 +50,20 @@
       <h2>اختر طريقة الفتح</h2>
       <span class="method-close" id="method-close-btn">✖️</span>
     </div>
-
     <div class="method-filename" id="method-filename">اسم الملف</div>
-
     <div class="method-preview">
       <canvas id="method-preview-canvas"></canvas>
       <div class="method-loading" id="method-loading">⏳ جاري التحميل...</div>
     </div>
-
     <div class="method-buttons">
       <button class="method-btn mozilla-btn" id="open-mozilla-btn">
         <span class="method-btn-icon">📄</span>
         <span class="method-btn-text">Mozilla PDF</span>
       </button>
-
       <button class="method-btn browser-btn" id="open-browser-btn">
         <span class="method-btn-icon">🌐</span>
         <span class="method-btn-text">المتصفح</span>
       </button>
-
       <button class="method-btn drive-btn" id="open-drive-btn">
         <span class="method-btn-icon">💾</span>
         <span class="method-btn-text">Google Drive</span>
@@ -91,39 +78,30 @@
     <div class="notice">
       💡 هذه الصفحة تظهر في أول زيارة فقط — الملفات ستُخزن في الكاش للتحميل السريع لاحقاً
     </div>
-
     <div class="logo">🏥</div>
     <h1>جاري التحميل</h1>
     <div class="subtitle">تجنب العدوى 🦠 واجمع العلاج 💊</div>
-
     <div class="progress-container">
       <div class="progress-bar" id="progressBar">0%</div>
     </div>
-
     <div class="file-status" id="fileStatus">جاري البدء...</div>
-
     <button class="continue-btn" id="continueBtn">متابعة إلى الموقع ➡️</button>
-
     <div class="game-container" id="gameContainer">
       <div class="game-stats">
         <div class="game-stat">❤️ <span id="heartsDisplay">0</span></div>
         <div class="game-stat">⭐ <span id="scoreDisplay">0</span></div>
       </div>
-
       <div class="runner" id="runner">👨‍⚕️</div>
-
       <div class="game-overlay" id="gameOverlay">
         <h2>انتهت اللعبة!</h2>
         <div class="final-score" id="finalScore">النقاط: 0</div>
         <button class="restart-btn" id="restartBtn">🔄</button>
       </div>
     </div>
-
     <div class="controls">
       <button class="control-btn" id="leftBtn">➡️</button>
       <button class="control-btn" id="rightBtn">⬅️</button>
     </div>
-
     <div class="leaderboard">
       <h3>🏆 أفضل 5 لاعبين عالمياً</h3>
       <ul class="leaderboard-list" id="leaderboardList">
@@ -143,22 +121,10 @@
     <img id="main-logo" src="image/0.png" alt="شعار الكلية" />
     <h1>اختر مجموعتك</h1>
     <div id="group-buttons">
-      <button class="group-btn" data-group="A">
-        <span class="group-letter">A</span>
-        <span class="group-label">Group A</span>
-      </button>
-      <button class="group-btn" data-group="B">
-        <span class="group-letter">B</span>
-        <span class="group-label">Group B</span>
-      </button>
-      <button class="group-btn" data-group="C">
-        <span class="group-letter">C</span>
-        <span class="group-label">Group C</span>
-      </button>
-      <button class="group-btn" data-group="D">
-        <span class="group-letter">D</span>
-        <span class="group-label">Group D</span>
-      </button>
+      <button class="group-btn" data-group="A"><span class="group-letter">A</span><span class="group-label">Group A</span></button>
+      <button class="group-btn" data-group="B"><span class="group-letter">B</span><span class="group-label">Group B</span></button>
+      <button class="group-btn" data-group="C"><span class="group-letter">C</span><span class="group-label">Group C</span></button>
+      <button class="group-btn" data-group="D"><span class="group-letter">D</span><span class="group-label">Group D</span></button>
     </div>
     <p style="color: #888; font-size: 12px; margin-top: 20px;">
       💡 يمكنك تغيير المجموعة لاحقاً من زر "🔄 Change Group"
@@ -169,19 +135,12 @@
 <!-- شريط الأدوات -->
 <div id="js-toggle-container" class="top">
   <div id="search-container">
-    <input 
-      type="text" 
-      id="search-input" 
-      placeholder="ابحث باسم الملف..."
-      autocomplete="off"
-    >
+    <input type="text" id="search-input" placeholder="ابحث باسم الملف..." autocomplete="off">
     <span id="search-icon" class="clickable-area">🔙</span>
   </div>
-
   <div class="controls-row">
     <span id="move-toggle">↕️</span>
     <span id="eye-toggle" title="إخفاء/إظهار البحث">👁️</span>
-
     <div class="hover-toggle-container">
       <span>Hover</span>
       <label class="switch">
@@ -223,7 +182,6 @@
       <button id="closePdfBtn" class="toolbar-btn">❌ إغلاق</button>
       <button id="downloadBtn" class="toolbar-btn">⬇ تحميل</button>
       <button id="shareBtn" class="toolbar-btn">🔗 مشاركة</button>
-      <button id="expand-toolbar-btn" class="pdf-control-btn" title="ملء الشاشة">🔼</button>
     </div>
   </div>
   <iframe id="pdfFrame" src="" sandbox="allow-same-origin allow-scripts allow-popups allow-forms"></iframe>
@@ -247,34 +205,27 @@
 <div id="scroll-container">
   <svg id="main-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMinYMin meet">
     <defs></defs>
-
     <g transform="translate(0,0)" id="files-list-container">
       <image data-src="image/wood.webp" x="0" y="0" width="1024" height="2454" style="pointer-events: none;" />
     </g>
-
     <g id="dynamic-links-group"></g>
     <g id="group-specific-content"></g>
-
     <g id="upper-wood-layer" style="pointer-events: none; z-index: 3;">
       <image data-src="image/Upper_wood.webp" x="0" y="0" width="1024" height="250" style="pointer-events: none;" />
     </g>
-
     <g id="fixed-controls-layer">
       <g id="change-group-btn" style="cursor: pointer;">
         <rect x="120" y="100" width="250" height="50" rx="10"/>
         <text id="group-btn-text" x="245" y="130" text-anchor="middle" dominant-baseline="middle">Change Group 🔄</text>
       </g>
-
       <g id="preload-btn" style="cursor: pointer;">
         <rect x="387" y="100" width="250" height="50" rx="10"/>
         <text x="512" y="130" text-anchor="middle" dominant-baseline="middle">🔄 شاشة التحميل</text>
       </g>
-
       <g id="reset-btn" style="cursor: pointer;">
         <rect x="654" y="100" width="250" height="50" rx="10"/>
-        <text id="reset-btn-text" x="779" y="130" text-anchor="middle" dominant-baseline="middle">🔄 تحديث</text>
+        <text id="reset-btn-text" x="779" y="130" text-anchor="middle" dominant-baseline="middle">🔄 Reset</text>
       </g>
-
       <g id="back-button-group" style="cursor: pointer;">
         <rect id="back-btn" x="112" y="160" width="800" height="70" rx="15" />
         <text x="512" y="195" id="back-btn-text" text-anchor="middle" dominant-baseline="middle">➡️ إلى الخريطة ➡️</text>
@@ -283,19 +234,24 @@
   </svg>
 </div>
 
-<!-- المكتبات -->
+<!-- ======================== نهاية عناصر الواجهة ======================== -->
+
+<!-- ================ المكتبات الخارجية ================ -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 <script>
   if (typeof pdfjsLib !== 'undefined') {
-    pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+    pdfjsLib.GlobalWorkerOptions.workerSrc = 
+      'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
   }
 </script>
 
-<!-- السكريبتات الرئيسية -->
-<script src="script.js"></script>
+<!-- ✅ السكريبت الرئيسي – نقطة الدخول الوحيدة (تم التعديل هنا) -->
+<script type="module" src="script.js"></script>
+
+<!-- ✅ Tracker (غير معياري) -->
 <script src="tracker.js"></script>
 
-<!-- Service Worker -->
+<!-- ✅ Service Worker -->
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
@@ -313,7 +269,8 @@ if ('serviceWorker' in navigator) {
             }
           });
         });
-      });
+      })
+      .catch(err => console.error('❌ فشل تسجيل SW:', err));
   });
 
   let refreshing = false;
@@ -326,22 +283,19 @@ if ('serviceWorker' in navigator) {
 }
 </script>
 
-<!-- فحص التحديثات -->
+<!-- ✅ فحص التحديثات من GitHub -->
 <script>
 async function checkForUpdates() {
   try {
     const lastCheck = localStorage.getItem('last_update_check');
     const now = Date.now();
-
     if (lastCheck && (now - parseInt(lastCheck)) < 300000) return;
 
     const response = await fetch(
-      'https://api.github.com/repos/MUE24Med/semester-3/commits/main',
+      'https://api.github.com/repos/MUE24Med/s3/commits/main',
       { cache: 'no-store', headers: { 'Accept': 'application/vnd.github.v3+json' } }
     );
-
     if (!response.ok) return;
-
     const data = await response.json();
     const latestSha = data.sha.substring(0, 7);
     const lastSha = localStorage.getItem('last_commit_sha');
@@ -353,6 +307,7 @@ async function checkForUpdates() {
     }
 
     if (lastSha !== latestSha) {
+      console.log('🆕 تحديث جديد متاح:', latestSha);
       const cacheNames = await caches.keys();
       await Promise.all(cacheNames.map(name => caches.delete(name)));
       localStorage.setItem('last_commit_sha', latestSha);
@@ -362,14 +317,14 @@ async function checkForUpdates() {
       localStorage.setItem('last_update_check', now.toString());
     }
   } catch (error) {
-    console.error('⚠️ خطأ في الفحص:', error);
+    console.warn('⚠️ خطأ في فحص التحديثات:', error);
   }
 }
-
 window.addEventListener('load', checkForUpdates);
 document.addEventListener('visibilitychange', () => {
   if (!document.hidden) checkForUpdates();
 });
 </script>
+
 </body>
 </html>
