--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
       </g>
       <g id="preload-btn" style="cursor: pointer;">
         <rect x="387" y="100" width="250" height="50" rx="10"/>
-        <text x="512" y="130" text-anchor="middle" dominant-baseline="middle">🔄 شاشة التحميل</text>
+        <text x="512" y="130" text-anchor="middle" dominant-baseline="middle">Loading 🔙</text>
       </g>
       <g id="reset-btn" style="cursor: pointer;">
         <rect x="654" y="100" width="250" height="50" rx="10"/>
-        <text id="reset-btn-text" x="779" y="130" text-anchor="middle" dominant-baseline="middle">🔄 Reset</text>
+        <text id="reset-btn-text" x="779" y="130" text-anchor="middle" dominant-baseline="middle">Restart 🔄</text>
       </g>
       <g id="back-button-group" style="cursor: pointer;">
         <rect id="back-btn" x="112" y="160" width="800" height="70" rx="15" />
